fixed menu bags

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,7 @@
 $fs-html: 16;
+$c-blue:#3927B0;
+$c-purple:#AC60D0;
+$c-orange: #FFC300;
 
 @mixin font($font-family, $font-size, $font-weight, $color) {
 	font-family: $font-family;
