--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .banner__wrapper {
   padding: 30px;
-  background: url("../images/banner.png") right bottom no-repeat, linear-gradient(to left bottom, #4c31b6, #a35bce);
+  background: url("../images/banner.png") 65% bottom no-repeat, linear-gradient(to left bottom, #AC60D0, #3927B0);
   height: 768px;
 }
 
@@ -14,12 +14,6 @@
   align-items: center;
   text-align: center;
 }
-@media (max-width: 476px) {
-  .header {
-    display: block;
-    width: 100%;
-  }
-}
 .header__logo {
   display: flex;
   align-self: flex-start;
@@ -29,11 +23,6 @@
   font-size: 1.5625rem;
   font-weight: 700;
   color: white;
-}
-@media (max-width: 476px) {
-  .header__logo {
-    display: block;
-  }
 }
 @media (min-width: 768px) {
   .header__logo {
@@ -50,17 +39,11 @@
 }
 .header__menu {
   display: flex;
-  flex-direction: column;
   padding: 15px;
   font-family: "SourceSansPro-Regular";
   font-size: 1rem;
   font-weight: 600;
   color: white;
-}
-@media (min-width: 476px) {
-  .header__menu {
-    flex-direction: row;
-  }
 }
 @media (min-width: 992px) {
   .header__menu {
@@ -68,28 +51,18 @@
   }
 }
 .header__menu-icon {
-  margin-top: 10px;
+  margin-right: 25px;
   font-size: 24px;
   transition: transform 0.3s linear;
-}
-@media (min-width: 476px) {
-  .header__menu-icon {
-    margin: 0 25px 0 0;
-  }
 }
 .header__menu-icon:hover {
   transform: scale(1.1);
 }
 .header__menuWrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
-}
-@media (min-width: 476px) {
-  .header__menuWrapper {
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-  }
+  flex-direction: row-reverse;
+  justify-content: flex-start;
 }
 .header__menuWrapper #menu__toggle:checked ~ .menu__btn > span {
   transform: rotate(45deg);
@@ -107,7 +80,7 @@
 }
 @media (max-width: 476px) {
   .header__menuWrapper #menu__toggle:checked ~ .header__list {
-    top: 200px;
+    top: 100px;
   }
 }
 @media (min-width: 476px) {
@@ -158,7 +131,7 @@
   width: 250px;
   border-radius: 20px;
   box-shadow: 0 0 5px 5px silver;
-  background: #a35bce;
+  background: #AC60D0;
 }
 @media (min-width: 477px) {
   .header__menuWrapper .header__list {
@@ -193,7 +166,7 @@
   }
 }
 .header__menuWrapper .header__list li .header__link:hover {
-  background-color: #4c31b6;
+  background-color: #3927B0;
 }
 @media (min-width: 992px) {
   .header__menuWrapper .header__list li .header__link:hover {
@@ -342,40 +315,6 @@ ul li {
 
 ul {
   margin: 0;
-}
-
-.container {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  overflow: hidden;
-}
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
-}
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-@media (min-width: 1440px) {
-  .container {
-    max-width: 1200px;
-  }
 }
 
 html {
