--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,40 @@
+.circle_small {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  background: linear-gradient(to left bottom, #AC60D0, #3927B0);
+  border-radius: 50%;
+  right: 40%;
+  top: -48px;
+}
+
+.circle_medium {
+  height: 140px;
+  width: 140px;
+  position: absolute;
+  background: linear-gradient(to left bottom, #AC60D0, #3927B0);
+  border-radius: 50%;
+  left: -59px;
+  bottom: -69px;
+}
+
+.circle_big {
+  height: 323px;
+  width: 323px;
+  position: absolute;
+  background: linear-gradient(to left bottom, #AC60D0, #3927B0);
+  border-radius: 50%;
+  left: 65%;
+  bottom: -22%;
+}
+
+.products__buttonItem, .explore__buttonWrapper .explore__button, .sneakers__infoButton, .banner__content-button, .header__button {
+  width: 170px;
+  height: 48px;
+  border-radius: 24px;
+  transition: all 0.2s linear;
+}
+
 .banner__wrapper {
   padding: 30px;
   background: url("../images/banner.png") 65% bottom no-repeat, linear-gradient(to left bottom, #AC60D0, #3927B0);
@@ -112,7 +149,7 @@
   width: 100%;
   height: 2px;
   background-color: white;
-  transition: all 0.3s linear;
+  transition: 0.3s linear;
 }
 .header__menuWrapper .menu__btn > span::before {
   content: "";
@@ -158,7 +195,7 @@
   cursor: pointer;
   display: block;
   padding: 12px 24px;
-  transition: all 0.3s linear;
+  transition: background-color, transform 0.3s linear;
 }
 @media (min-width: 992px) {
   .header__menuWrapper .header__list li .header__link {
@@ -175,15 +212,11 @@
   }
 }
 .header__button {
-  width: 170px;
-  height: 48px;
   border-color: rgba(255, 255, 255, 0.6);
-  border-radius: 24px;
   font-family: "SourceSansPro-Regular";
   font-size: 1rem;
   font-weight: 600;
   color: white;
-  transition: all 0.2s linear;
 }
 @media (min-width: 992px) {
   .header__button {
@@ -194,6 +227,7 @@
   background: #FFC300;
   color: white;
   border-color: transparent;
+  transform: scale(1.05);
 }
 
 .banner__content {
@@ -227,17 +261,12 @@
   }
 }
 .banner__content-button {
-  width: 170px;
-  height: 48px;
-  margin-bottom: 5px;
   background: #FFC300;
-  border-radius: 24px;
   border-color: transparent;
   font-family: "SourceSansPro-Regular";
   font-size: 1rem;
   font-weight: 600;
   color: white;
-  transition: all 0.2s linear;
 }
 .banner__content-button:hover {
   background: transparent;
@@ -252,14 +281,10 @@
 
 .facts {
   cursor: default;
+  justify-content: center;
 }
 .facts__item {
-  padding: 100px 30px;
-}
-@media (min-width: 768px) {
-  .facts__item {
-    padding: 100px 10px;
-  }
+  padding: 100px 0;
 }
 .facts__itemNumber {
   margin: 20px 0;
@@ -288,7 +313,6 @@
 }
 .sneakers__info {
   margin-bottom: 48px;
-  padding: 15px;
 }
 @media (min-width: 768px) {
   .sneakers__info {
@@ -325,17 +349,13 @@
   color: black;
 }
 .sneakers__infoButton {
-  width: 170px;
-  height: 48px;
   margin-bottom: 5px;
   background: #AC60D0;
-  border-radius: 24px;
   border-color: transparent;
   font-family: "SourceSansPro-Regular";
   font-size: 1rem;
   font-weight: 700;
   color: white;
-  transition: all 0.2s linear;
 }
 .sneakers__infoButton:hover {
   background: transparent;
@@ -343,52 +363,38 @@
   border-color: #AC60D0;
   transform: scale(1.05);
 }
-.sneakers__product {
+.sneakers__productWrapper {
   display: flex;
   align-self: flex-end;
+}
+@media (min-width: 576px) {
+  .sneakers__productWrapper {
+    align-self: center;
+  }
+}
+.sneakers__product {
+  display: flex;
   flex-direction: column;
-  width: 315px;
-  padding: 0;
   margin-right: 15px;
   background: linear-gradient(to left bottom, #AC60D0, #3927B0);
 }
 @media (min-width: 576px) {
   .sneakers__product {
     margin-right: 0;
-    align-self: center;
-    width: 380px;
-  }
-}
-@media (min-width: 768px) {
-  .sneakers__product {
-    margin-right: 0;
-    width: 450px;
-  }
-}
-@media (min-width: 992px) {
-  .sneakers__product {
-    width: 470px;
   }
 }
 @media (min-width: 1200px) {
   .sneakers__product {
     flex-direction: row;
-    width: 740px;
   }
 }
 .sneakers__productImage {
   transition: transform 0.3s linear;
-  align-self: flex-end;
-  flex: 0 0 315px;
+  transform: translate(-30px, -30px);
 }
-@media (min-width: 576px) {
+@media (min-width: 375px) {
   .sneakers__productImage {
-    flex: 0 0 380px;
-  }
-}
-@media (min-width: 768px) {
-  .sneakers__productImage {
-    flex: 0 0 450px;
+    transform: none;
   }
 }
 @media (min-width: 992px) {
@@ -401,13 +407,16 @@
     transform: translate(-30px, -30px);
   }
 }
-@media (min-width: 576px) {
-  .sneakers__productImage:hover {
-    transform: translate(-30px, -30px);
-  }
+.sneakers__productImage img {
+  width: 100%;
 }
 .sneakers__productDesc {
-  padding: 23px;
+  padding: 25px;
+}
+@media (min-width: 1200px) {
+  .sneakers__productDesc {
+    padding: 25px 25px 0px 25px;
+  }
 }
 .sneakers__productDescTitle {
   line-height: 48px;
@@ -445,31 +454,6 @@
   .explore__block {
     min-height: 400px;
   }
-}
-
-.circle {
-  background: linear-gradient(to left bottom, #AC60D0, #3927B0);
-  border-radius: 50%;
-  position: absolute;
-}
-.circle_small {
-  width: 100px;
-  height: 100px;
-  right: 40%;
-  top: -48px;
-}
-.circle_medium {
-  width: 140px;
-  height: 140px;
-  left: -59px;
-  bottom: -69px;
-}
-.circle_big {
-  width: 323px;
-  height: 323px;
-  left: 65%;
-  bottom: -22%;
-  z-index: 0;
 }
 
 .explore {
@@ -521,6 +505,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin-top: 40px;
 }
 @media (min-width: 768px) {
   .explore__buttonWrapper {
@@ -532,17 +517,12 @@
   align-items: center;
   justify-content: center;
   z-index: 1;
-  margin-top: 40px;
-  width: 170px;
-  height: 48px;
   background: #FFC300;
-  border-radius: 24px;
   border-color: transparent;
   font-family: "SourceSansPro-Regular";
   font-size: 1rem;
   font-weight: 700;
   color: white;
-  transition: all 0.2s linear;
 }
 @media (min-width: 768px) {
   .explore__buttonWrapper .explore__button {
@@ -642,16 +622,12 @@
   text-align: center;
 }
 .products__buttonItem {
-  width: 170px;
-  height: 48px;
   border-color: #AC60D0;
-  border-radius: 24px;
   background: transparent;
   font-family: "SourceSansPro-Regular";
   font-size: 1rem;
   font-weight: 700;
   color: #AC60D0;
-  transition: all 0.2s linear;
 }
 .products__buttonItem:hover {
   background: #AC60D0;
@@ -714,6 +690,10 @@ html {
   html {
     font-size: 20px;
   }
+}
+
+.circle_big {
+  z-index: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
