--- a/scss/facts.scss
+++ b/scss/facts.scss
@@ -4,13 +4,10 @@
 
 .facts {
 	cursor: default;
+	justify-content: center;
 	
 	&__item {
-		padding: 100px 30px;
-
-		@media (min-width: 768px) {
-			padding: 100px 10px;
-		}
+		padding: 100px 0;
 
 		&Number {
 			margin: 20px 0;
