changed transition property

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -40,5 +40,5 @@ $c-orange: #FFC300;
 	width: 170px;
 	height: 48px;
 	border-radius: 24px;
-	transition: all .2s linear;
+	transition: .2s linear;
 }
