--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
   width: 170px;
   height: 48px;
   border-radius: 24px;
-  transition: all 0.2s linear;
+  transition: 0.2s linear;
 }
 
 .banner__wrapper {
